--- a/inc/index.html
+++ b/inc/index.html
@@ -18,20 +18,23 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a href="index.html" target="nav-Link"></a>
+                        <a href="index.html" class="nav-link">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a href="feedback.php" target="nav-Link"></a>
+                        <a href="feedback.php" target="nav-Link">Feedback</a>
                     </li>
                     <li class="nav-item">
-                        <a href="about.php" target="nav-Link"></a>
+                        <a href="about.php" target="nav-Link">Content</a>
                     </li>
                 </ul>
                     </div>
             </div>
         </nav>
         <main>
-            <div class="container "
+            <div class="container d-flex flex-column align-items-center"></div>
         </main>
+        <footer class ="text-center mt-5">
+            &copy; Jaika Madrid -- 2024
+        </footer>
     </body>
 </html>
