--- a/inc/index.html
+++ b/inc/index.html
@@ -7,34 +7,34 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     </head>
     <body>
-        <nav class="navbar navbar-expand-sm navbar-light bg-light mb-4"></div>
+        <nav class="navbar navbar-expand-sm navbar-light bg-light mb-4">
         <div class="container">
             <a href="#" class="navbar-brand">Git Workflow</a>
-            <button class="navbar-toggler" type="button"
-            data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            <button class="navbar-toggler" type="button" 
+            data-bs-toggle="collapse" data-bs-target="#navbarNav" 
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a href="index.html" class="nav-link">Login</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="feedback.php" target="nav-Link">Feedback</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="about.php" target="nav-Link">Content</a>
-                    </li>
-                </ul>
-                    </div>
-            </div>
-        </nav>
-        <main>
-            <div class="container d-flex flex-column align-items-center"></div>
-        </main>
-        <footer class ="text-center mt-5">
-            &copy; Jaika Madrid -- 2024
-        </footer>
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a href="index.html" class="nav-link">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a href="feedback.php" class="nav-link">Feedback</a>
+                </li>
+                <li class="nav-item">
+                    <a href="about.php" class="nav-link">Content</a>
+                </li>
+            </ul>
+                </div>
+        </div>
+    </nav>
+    <main>
+        <div class="container d-flex flex-column align-items-center"></div>
+    </main>
+    <footer class="text-center mt-5">
+        Copyright &copy; Jaika Madrid - 2024
+    </footer>
     </body>
 </html>
